2007-05-07  Brian Bidulock  <bidulock@openss7.org>

	* tests/kernel.at: correction to module test for new distros
	* doc/manual/news.texi: updated release files

2007-05-06  Brian Bidulock  <bidulock@openss7.org>

	* sctp.spec.in: make GPL version more obvious

2007-04-17  Brian Bidulock  <bidulock@openss7.org>

	* tests/testsuite.at: testsuite factoring

2007-04-12  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: corrected typo

2007-03-25  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: support for 2.6.20-1.2307.fc5
	* doc/manual/news.texi: support for 2.6.20-1.2307.fc5
	* include/net/sctp.h: support for 2.6.20-1.2307.fc5
	* src/sctp.c: support for 2.6.20-1.2307.fc5
	* src/sctp_glue.c: support for 2.6.20-1.2307.fc5

2007-03-15  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: pushed release date

2007-03-12  Brian Bidulock  <bidulock@openss7.org>

	* test/test-tcpc.c: rationalize to stacks
	* test/test-tcps.c: rationalize to stacks
	* test/test-udpc.c: rationalize to stacks
	* test/test-udps.c: rationalize to stacks

	* doc/man/man8/test-tcpc.8.man: updates
	* doc/man/man8/test-udpc.8.man: updates

	* doc/man/man8/test-sctp-dc.8.man: boosted default port 10000->18000
	* doc/man/man8/test-sctp-sc.8.man: boosted default port 10000->18000
	* doc/man/man8/test-sctp-tc.8.man: boosted default port 10000->18000
	* doc/man/man8/test-sctpc.8.man: boosted default port 10000->18000
	* doc/man/man8/test-tcp-dc.8.man: boosted default port 10000->18000
	* doc/man/man8/test-tcp-tc.8.man: boosted default port 10000->18000
	* doc/man/man8/test-tcpc.8.man: boosted default port 10000->18000
	* doc/man/man8/test-udpc.8.man: boosted default port 10000->18000

	* test/test-sctp-dc.c: boosted default port 10000->18000
	* test/test-tcpc.c: boosted default port 10000->18000
	* test/test-sctp-ds.c: boosted default port 10000->18000
	* test/test-sctp-sc.c: boosted default port 10000->18000
	* test/test-sctp-ss.c: boosted default port 10000->18000