@@ -1,3 +1,7 @@
+2007-05-17  Brian Bidulock  <bidulock@openss7.org>
+
+	* acinclude.m4: check for nf_reset
+
 2007-05-07  Brian Bidulock  <bidulock@openss7.org>
 
 	* tests/kernel.at: correction to module test for new distros
